--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,13 @@
         <div class="banner class w-full">
             <img src="img/banner.jpg" class="w-full  h-1/2 object-cover	" alt="">
         </div>
-        sad
+        <div class="banner-bot py-2  flex items-center justify-around">
+            <a href="#" class="text-lg border-b-2 border-b-neutral-500">Kreditlə</a>
+            <a href="#" class="text-lg border-b-2 border-b-neutral-500">Barter</a>
+            <a href="#" class="text-lg border-b-2 border-b-neutral-500">Aksesuarlar</a>
+            <a href="#" class="text-lg border-b-2 border-b-neutral-500">Şinlər</a>
+            <a href="#" class="text-lg border-b-2 border-b-neutral-500">İcarə</a>
+        </div>
         <div id="container" class=" flex items-center justify-center bg-[#eee] flex-row w-full py-7 gap-4 flex-wrap ">
 
         </div>
