--- a/index.htm
+++ b/index.htm
@@ -122,13 +122,13 @@
         <div class=" p-2 menu-content border-t-2 border-t-zinc bg-white w-full h-20 fixed right-0 left-0 p-1.5 bottom-0">
             <ul id="menu" class="flex items-center justify-around">
                 <li class="flex  flex-col text-center items-center">
-                    <a href="#" class="mx-1.5 text-lg  whitespace-nowrap tracking-widest text-[#8d94ad]">
+                    <a href="#" class="mx-1.5 text-md whitespace-nowrap tracking-widest text-[#8d94ad]">
                         <i class="fa-solid text-lg  text-center fa-house"></i>
                         <br>Əsas
                     </a>
                 </li>
                 <li class="flex  text-center flex-col items-center">
-                    <a href="#" class=" text-lg  text-[#8d94ad]">
+                    <a href="#" class=" text-md  text-[#8d94ad]">
                         <i class="fa-solid text-lg  fa-heart"></i>
                         <br>Seçilmişlər
                     </a>
@@ -136,17 +136,17 @@
                 <li class="flex flex-col  text-center items-center relative">
                     <div class="yeni-elan flex flex-col items-center">
                         <img src="img/plus.svg" class="w-9 object-cover mx-1.5 transform -translate-y-5" alt="">
-                        <span class="text-[#8d94ad] text-lg  mt-1 transform -translate-y-1">Yeni elan</span>
+                        <span class="text-[#8d94ad] text-md  mt-1 transform -translate-y-1">Yeni elan</span>
                     </div>
                 </li>
                 <li class="flex  flex-col text-center items-center">
-                    <a href="#" class="text-lg  text-[#8d94ad]">
+                    <a href="#" class="text-md  text-[#8d94ad]">
                         <i class="fa-regular text-lg fa-circle-user"></i>
                         <br>Kabinet
                     </a>
                 </li>
                 <li class="flex flex-col text-center items-center">
-                    <a href="#" class=" text-lg  text-[#8d94ad]">
+                    <a href="#" class=" text-md  text-[#8d94ad]">
                         <i class="fa-solid fa-bars  text-lg  "></i>
                         <br>Daha çox
                     </a>
