--- a/index.htm
+++ b/index.htm
@@ -14,96 +14,217 @@
 </head>
 
 <body class="bg-[#F6F6F8]">
+    <header class="old-header">
+       
+        <div class="old-bar flex items-center justify-between ">
+            <div class="old-top ml-5 flex items-start justify-start p-2 gap-5 w-full  bg-[#f6f7fa]">
+                <a href="" class="font-arial text-base ml-5 text-[#8d94ad] hover:text-[#ca1016]">Tap.az</a>
+                <a href="" class="font-arial text-base mr-2 text-[#8d94ad] hover:text-[#ca1016]">Bina.az</a>
+                <a href="" class="font-arial text-base mr-2 text-[#8d94ad] hover:text-[#ca1016]">Boss.az</a>
+
+            </div>
+            <div class="bar-2 flex items-end justify-end gap-3   mr-20 w-full">
+                <span class="font-arial text-md text-[#8d94ad] mr-2 hover:text-[#ca1016]">Dəstək: (012) 505-77-55</span>
+                <span class="font-arial text-md text-[#8d94ad] hover:text-[#ca1016] mr-2"> Yardım</span>
+                <span class="font-arial text-md text-[#8d94ad] hover:text-[#ca1016] mr-2"> Ru</span>
+                <span class="font-arial text-md text-[#8d94ad] hover:text-[#ca1016]  mr-2"> <i
+                        class="fa-solid text-md fa-heart"></i> Seçilmişlər</span>
+                <span class="font-arial text-md text-[#8d94ad] hover:text-[#ca1016] mr-2"> <i
+                        class="fa-regular  text-md fa-circle-user"></i> Giriş</span>
+            </div>
+        </div>
+        <div class="old-bar-btm flex items-center justify-between bg-[#ca1016] gap-2 w-full py-2">
+            <div class="old-bar-head flex items-center ml-12 justify-center">
+                <h1 class="text-xl uppercase text-white font-bold">Turbo.az</h1>
+            </div>
+            <div class="kataloq flex items-center justify-center gap-3 ml-12">
+                <a href="" class="font-arial text-base ml-2 text-[#fff] hover:text-[#ccc]">Bütün elanlar</a>
+                <a href="" class="font-arial text-base ml-5 text-[#fff] hover:text-[#ccc]">Salonlar</a>
+                <a href="" class="font-arial text-base ml-5 text-[#fff] hover:text-[#ccc]">Avtokataloq</a>
+                <a href="" class="font-arial text-base ml-5 text-[#fff] hover:text-[#ccc]">Moto</a>
+                <a href="" class="font-arial text-base ml-5 text-[#fff] hover:text-[#ccc]">Ehtiyat hissələr və
+                    aksesuarlar</a>
+                <a href="" class="font-arial text-base ml-5 text-[#fff] hover:text-[#ccc]">İcarə</a>
+
+            </div>
+
+            <a href=""
+                class="flex items-center justify-center mr-20 bg-[#7ed321] py-2 gap-3 px-2 rounded-md h-[40px] text-white text-md font-500"
+                style="border-radius: 7px;"> <img src="img/yenielan2.svg" class="w-4 h-4 " alt="">Yeni elan</a>
+
+        </div>
+    </header>
     <main>
-
-
-        <div
-            class="header text-lg uppercase  font-bold  no-underline font-arial flex p-3.5  items-center justify-center bg-white">
-
-            <div class="desktop flex items-center justify-between w-full gap-2.5  ">
-                <div class="dekstop-menu  flex items-center justify-around flex-row w-1/5 gap-2.5 ">
-                    <a href="#">
-                        <h1 class="text-lg uppercase  font-bold  no-underline font-arial text-[#ca1016]">Turbo.az</h1>
-
-                    </a>
-                    <hr class=" h-6 w-5 m-0.5 bg-[#f7f8fa]">
-                    <a href="#" class="m-0.5 text-[#8d94ad]">
-                        Bina.az
-                    </a>
-                    <hr class="  m-0.5 h-6 w-5 bg-[#f7f8fa]">
-                    <a href="#" class="m-0.5 text-[#8d94ad]">
-                        Tap.az
-                    </a>
-
-                </div>
-                <div class="yerlesdir w-7 h-7   bg-cover ">
-                    <div class="plus "> </div>
-                </div>
-
-            </div>
-            <div class="mobil flex items-center justify-between w-full">
-                <a href="#" class="m-0.5 text-[#8d94ad]">
-                    <h1 class=" mx-4 text-lg uppercase  font-bold  no-underline font-arial text-[#ca1016]">Turbo.az</h1>
-
-                </a>
-                <hr class=" h-6 w-0.5 m-0.5 bg-[#f7f8fa]">
-                <a href="#" class="m-0.5 text-[#8d94ad]">
-                    Bina.az
-                </a>
-                <hr class=" h-6 w-0.5 m-0.5 bg-[#f7f8fa]">
-                <a href="#" class="m-0.5 text-[#8d94ad]">
-                    Tap.az
-                </a>
-                <div class="yerlesdir  bg-no-repeat bg-cover ml-4  w-7 h-7 rounded-50 ">
-
-                </div>
-            </div>
-        </div>
-        <div class="filtir  flex items-center justify-center mt-4 bg-[#F6F6F8]  flex-col">
-            <form class="w-11/12 bg-white px-4 shadow-[#0000000a]  py-2  rounded-t-xl rounded-bl-xl rounded-br-xl ">
-                <span class="ml-px font-arial  text-[#212c3a] text-sm"> <i
-                        class="fa-solid fa-car text-[#ca1016] text-lg mx-2"></i>Bütün markalar</span>
-                <select class="m-0.5 border-none outline-none  text-[#B1B5C7]">
-                    <option class="mx-2 border-none outline-none text-[#B1B5C7]" value="">G 63 AMG</option>
-                    <option class="mx-2 border-none outline-none  text-[#B1B5C7]" value="">Tundra</option>
-                    <option class="mx-2 border-none outline-none text-[#B1B5C7] " value=" ">S 600</option>
-
+        <div class="old-filtr  flex items-center justify-center text-center w-full p-2 gap-4">
+            <div class="filtr1 pt-3 flex items-start justify-start flex-col gap-2">
+                <select class="w-full p-2" style="border-radius: 7px;">
+                    <option class="" value="#">Abarth</option>
+                    <option value="#">Acura</option>
                 </select>
-                <div
-                    class="filtir-2 flex border-t-2 border-t-zinc shadow-[#0000000a] flex-auto flex-row justify-start  ">
-                    <img src="img/filter.png" class="my-2  w-5 object-cover mr-2.5 rotate-90" alt="">
-                    <p class="text-base my-2 "> Filtirlər</p>
+                <div class="filtr-text ">
+                    <input type="text" style="border-radius: 7px;" class="text-[#8d94ad] h-9 p-2  w-28"
+                        placeholder="Qiymət,min">
+                    <input type="text" style="border-radius: 7px;" class="text-[#8d94ad] h-9 p-2  w-28"
+                        placeholder="Qiymət,max">
+                </div>
+            </div>
+            <div class="filtr2 pt-3  flex items-start justify-start flex-col gap-2">
+                <select class="w-full p-2" style="border-radius: 7px;">
+                    <option class="w-full" value="#">Model</option>
+                    <option value="#">Acura</option>
+                </select>
+                <div class="filtr-text flex items-center justify-center flex-row gap-2 ">
+                    <select style="border-radius: 7px;" class="text-[#8d94ad] h-9 p-2 " placeholder="Qiymət,min">
+                        <option value="">AZN</option>
+                    </select>
+                    <a href=""
+                        class="flex items-center justify-center w-20  bg-[#fff] py-2 gap-3 px-2 rounded-md h-[40px] text-[#8d94ad text-md font-500"
+                        style="border-radius: 7px;">Kredit</a>
+                    <a href=""
+                        class="flex items-center justify-center w-20 bg-[#fff]  gap-3 px-2 rounded-md h-[40px] text-[#8d94ad] text-md font-500"
+                        style="border-radius: 7px;">Barter</a>
+                </div>
+            </div>
+            <div class="filtr2 pt-3  flex items-start justify-start flex-col gap-2">
+                <div class="filtr-text flex items-center justify-center flex-row gap-2 ">
+                    <a href=""
+                        class="flex items-center justify-center w-20  bg-[#ca1016] py-2 gap-3 px-2 rounded-md h-[40px] text-[#fff] text-md font-500"
+                        style="border-radius: 7px;">Hamısı</a>
+                    <a href=""
+                        class="flex items-center justify-center w-20  bg-[#fff] py-2 gap-3 px-2 rounded-md h-[40px] text-[#8d94ad] text-md font-500"
+                        style="border-radius: 7px;">Yeni</a>
+                    <a href=""
+                        class="flex items-center justify-center w-20 bg-[#fff]  gap-3 px-2 rounded-md h-[40px] text-[#8d94ad] text-md font-500"
+                        style="border-radius: 7px;">Sürülmüş</a>
+                </div>
+                <select class="w-full p-2 text-[#8d94ad]" style="border-radius: 7px;">
+                    <option class="w-full text-[#8d94ad]" value="#">Ban növü</option>
+                    <option value="#">Acura</option>
+                </select>
+
+            </div>
+            <div class="filtr2 pt-3  flex items-start justify-start flex-col gap-2">
+                <select class="w-full p-2 text-[#8d94ad]" style="border-radius: 7px;">
+                    <option class="w-full text-[#8d94ad]" value="#">Şəhər</option>
+                    <option value="#">Acura</option>
+                </select>
+                <div class="filtr-text flex items-center justify-center flex-row gap-2 ">
+                    <select class="w-full p-2 text-[#8d94ad]" style="border-radius: 7px;">
+                        <option class="w-full text-[#8d94ad]" value="#">il,min</option>
+                        <option value="#">Acura</option>
+                    </select>
+                    <select class="w-full p-2  text-[#8d94ad]" style="border-radius: 7px;">
+                        <option class="w-full text-[#8d94ad]" value="#">il,max</option>
+                        <option value="#">Acura</option>
+                    </select>
                 </div>
 
-            </form>
-            <div
-                class="moto  h-10 flex m-4 bg-white rounded-t-xl rounded-bl-xl rounded-br-xl items-center w-11/12    flex-row justify-between ">
-                <span class="ml-2">Moto </span>
-                <img class="w-4 mx-3.5  h-4 "
-                    src="https://turbo.azstatic.com/assets/mobile/icon-arrow--right--gray-9e53d7f3ad0a5f4cd3ae5664f46954c300fc46fffda7fe4a3a8b3c081a7c32e7.svg"
-                    alt="">
             </div>
         </div>
-        <div class="banner class w-full">
-            <img src="img/banner.jpg" class="w-full  h-1/2 object-cover	" alt="">
+        <div class="filt3-botm flex items-center justify-end p-4 flex-row gap-4 mr-48">
+            <a href="" class=" text-[#8d94ad] text-md font-500 mr-4">Sıfrıla</a>
+            <a href="" class=" text-[#ca1016] text-md  font-500 mr-4"> Daha çox filtr <i class="fa-solid fa-chevron-down"></i> </a>
+            <a href=""
+                class="flex items-center justify-center w-34 bg-[#ca1016]  gap-3 px-2 rounded-md h-[40px] text-[#fff] text-md font-500"
+                style="border-radius: 7px;">Elanları göstər</a>
         </div>
-        <div class="banner-bot py-2  flex items-center justify-around">
-            <a href="#" class="text-lg border-b-2 border-b-neutral-500">Kreditlə</a>
-            <a href="#" class="text-lg border-b-2 border-b-neutral-500">Barter</a>
-            <a href="#" class="text-lg border-b-2 border-b-neutral-500">Aksesuarlar</a>
-            <a href="#" class="text-lg border-b-2 border-b-neutral-500">Şinlər</a>
-            <a href="#" class="text-lg border-b-2 border-b-neutral-500">İcarə</a>
-        </div>
-        <div id="container" class=" flex items-center justify-center bg-[#eee] flex-row w-full py-7 gap-4 flex-wrap ">
 
         </div>
+  
+            <div class="header text-lg uppercase  font-bold  no-underline font-arial flex p-3.5  items-center justify-center bg-white">
+
+                <div class="desktop flex items-center justify-between w-full gap-2.5  ">
+                    <div class="dekstop-menu  flex items-center justify-around flex-row w-1/5 gap-2.5 ">
+                        <a href="#">
+                            <h1 class="text-lg uppercase  font-bold  no-underline font-arial text-[#ca1016]">Turbo.az
+                            </h1>
+
+                        </a>
+                        <hr class=" h-6 w-5 m-0.5 bg-[#f7f8fa]">
+                        <a href="#" class="m-0.5 text-[#8d94ad]">
+                            Bina.az
+                        </a>
+                        <hr class="  m-0.5 h-6 w-5 bg-[#f7f8fa]">
+                        <a href="#" class="m-0.5 text-[#8d94ad]">
+                            Tap.az
+                        </a>
+
+                    </div>
+                    <div class="yerlesdir w-7 h-7   bg-cover ">
+                        <div class="plus "> </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="filtir  flex items-center justify-center mt-4 bg-[#F6F6F8]  flex-col">
+                <form class="w-11/12 bg-white px-4 shadow-[#0000000a]  py-2  rounded-t-xl rounded-bl-xl rounded-br-xl ">
+                    <span class="ml-px font-arial  text-[#212c3a] text-sm"> <i
+                            class="fa-solid fa-car text-[#ca1016] text-lg mx-2"></i>Bütün markalar</span>
+                    <select class="m-0.5 border-none outline-none  text-[#B1B5C7]">
+                        <option class="mx-2 border-none outline-none text-[#B1B5C7]" value="">G 63 AMG</option>
+                        <option class="mx-2 border-none outline-none  text-[#B1B5C7]" value="">Tundra</option>
+                        <option class="mx-2 border-none outline-none text-[#B1B5C7] " value=" ">S 600</option>
+
+                    </select>
+                    <div
+                        class="filtir-2 flex border-t-2 border-t-zinc shadow-[#0000000a] flex-auto flex-row justify-start  ">
+                        <img src="img/filter.png" class="my-2  w-5 object-cover mr-2.5 rotate-90" alt="">
+                        <p class="text-base my-2 "> Filtirlər</p>
+                    </div>
+
+                </form>
+                <div
+                    class="moto  h-10 flex m-4 bg-white rounded-t-xl rounded-bl-xl rounded-br-xl items-center w-11/12    flex-row justify-between ">
+                    <span class="ml-2">Moto </span>
+                    <img class="w-4 mx-3.5  h-4 "
+                        src="https://turbo.azstatic.com/assets/mobile/icon-arrow--right--gray-9e53d7f3ad0a5f4cd3ae5664f46954c300fc46fffda7fe4a3a8b3c081a7c32e7.svg"
+                        alt="">
+                </div>
+            </div>
+
+
+            <div class="banner class w-full header ">
+                <img src="img/banner.jpg" class="w-full  h-1/2 object-cover	" alt="">
+            </div>
+            <div class="banner-bot py-2  flex items-center justify-around">
+                <a href="#" class="text-lg border-b-2 border-b-neutral-500">Kreditlə</a>
+                <a href="#" class="text-lg border-b-2 border-b-neutral-500">Barter</a>
+                <a href="#" class="text-lg border-b-2 border-b-neutral-500">Aksesuarlar</a>
+                <a href="#" class="text-lg border-b-2 border-b-neutral-500">Şinlər</a>
+                <a href="#" class="text-lg border-b-2 border-b-neutral-500">İcarə</a>
+            </div>
+            <div class="premium-elan bg-[#f1f3f7] p-3 uppercase w-full flex items-start justify-start font-bold border-t border-b border-[#eaebf2]">
+                <h3>Premium Elanlar</h3>
+            </div>
+            <div id="container"class=" flex items-center justify-center bg-[#eee] flex-row w-full py-7 gap-4 flex-wrap ">
+
+            </div>
 
 
 
     </main>
-    <footer class=" pb-20  w-full bg-[#f6f7fa] px-4  border-t-indigo-[##eceff6]">
-        <div class="footercontent">
-            <div class="footer1 text-[#8d94ad] my-4 flex items-start justify-center flex-col">
+    <footer class="   w-full bg-[#f6f7fa]  border-t-indigo-[##eceff6]">
+        <div class="footer-old ">
+            <div class="footerold-top px-2 p-2 flex items-start justify-start gap-2 pt-3">
+                <a href="#" class="text-md ml-5 ">Qaydalar</a>
+                <a href="#"  class="text-md mr-5 ">Qanun</a>
+                <a href="#"  class="text-md mr-5 ">İstifadəçi razılaşması</a>
+                <a href="#"  class="text-md mr-5 ">Məxfilik siyasəti</a>
+                <a href="#"  class="text-md mr-5 ">Sifarişli avtomobil alan alıcı üçün tövsiyələr</a>
+            </div>
+            <div class="footerold-top w-full flex items-start justify-start gap-2 p-5 bg-[#ca1016]">
+                <p class="text-sm ml-5 text-white  ">Saytın Administrasiyası reklam bannerlərinin və yerləşdirilmiş   elanların məzmununa  görə məsuliyyət daşımır.</p>
+                <div class="footerold-top w-full flex items-center justify-end gap-2 p-5 bg-[#ca1016]">
+                    <p class="text-sm ml-5 text-white w-30 ">2006-2024 Digital Classifieds MMC. VÖEN: 1405631661</p>
+                    <a href="#" class="text-md ml-5 text-white  ">Mobil versiyası</a>
+                </div>
+            </div>
+            
+        </div>
+        <div class="footercontent py-16 px-2">
+            <div class="footer1 text-[#8d94ad] my-2 flex items-start justify-center flex-col">
                 <a href="#">Qaydalar</a>
                 <a href="#">İstifadəçi razılaşması</a>
                 <a href="#">Reklam yerləşdirin</a>
@@ -119,7 +240,8 @@
         </div>
     </footer>
     <div class="menu-bar m-auto flex w-full">
-        <div class=" p-2 menu-content border-t-2 border-t-zinc bg-white w-full h-20 fixed right-0 left-0 p-1.5 bottom-0">
+        <div
+            class=" p-2 menu-content border-t-2 border-t-zinc bg-white w-full h-20 fixed right-0 left-0 p-1.5 bottom-0">
             <ul id="menu" class="flex items-center justify-around">
                 <li class="flex  flex-col text-center items-center">
                     <a href="#" class="mx-1.5 text-md whitespace-nowrap tracking-widest text-[#8d94ad]">
