--- a/index.htm
+++ b/index.htm
@@ -268,7 +268,7 @@
                         <br>Kabinet
                     </a>
                 </li>
-                <li class="flex flex-col text-center items-center">
+                <li onclick="tabas()" class="flex flex-col text-center items-center">
                     <a href="#" class=" text-md  text-[#8d94ad]">
                         <i class="fa-solid fa-bars  text-lg  "></i>
                         <br>Daha çox
@@ -277,7 +277,8 @@
             </ul>
         </div>
     </div>
-
+    
+    </div>
 
     <script src="app.js">
     </script>
