--- a/index.htm
+++ b/index.htm
@@ -198,7 +198,7 @@
             <div class="premium-elan bg-[#f1f3f7] p-3 uppercase w-full flex items-start justify-start font-bold border-t border-b border-[#eaebf2]">
                 <h3>Premium Elanlar</h3>
             </div>
-            <div id="container"class=" elan flex items-center justify-center bg-[#eee] flex-row w-full py-7 gap-4 flex-wrap ">
+            <div id="container"class=" elan flex items-center justify-center bg-[#eee] flex-row w-full p-1 gap-2 flex-wrap ">
 
             </div>
 
