--- a/index.htm
+++ b/index.htm
@@ -176,12 +176,20 @@
 
                 </form>
                 <div
-                    class="moto  h-10 flex m-4 bg-white rounded-t-xl rounded-bl-xl rounded-br-xl items-center w-11/12    flex-row justify-between ">
-                    <span class="ml-2">Moto </span>
+                    class="moto  py-3 h-10 flex m-4 bg-white rounded-t-xl rounded-bl-xl rounded-br-xl items-center w-11/12    flex-row justify-between ">
+                    <span class="ml-5">Moto </span>
                     <img class="w-4 mx-3.5  h-4 "
                         src="https://turbo.azstatic.com/assets/mobile/icon-arrow--right--gray-9e53d7f3ad0a5f4cd3ae5664f46954c300fc46fffda7fe4a3a8b3c081a7c32e7.svg"
                         alt="">
                 </div>
+                <div
+                    class="moto  py-1 h-10 flex m-4 bg-white rounded-t-xl rounded-bl-xl rounded-br-xl items-center w-11/12    flex-row justify-between ">
+                    <a href="#" class="ml-5  text-md">Avtokataloq  <span style="border-radius: 7px;" class="ml-1 font-500 bg-[#77c81d]  px-2 py-1 text-center  text-md  text-white">Yeni </span></a> 
+                    <img class="w-4 mx-3.5  h-4 "
+                        src="https://turbo.azstatic.com/assets/mobile/icon-arrow--right--gray-9e53d7f3ad0a5f4cd3ae5664f46954c300fc46fffda7fe4a3a8b3c081a7c32e7.svg"
+                        alt="">
+                </div>
+               
             </div>
 
 
